15367
2.8.0.RC2:
```scala
Welcome to Scala version 2.8.0.RC2 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_20).

scala> class M(val a: AnyRef)                        
defined class M

scala> case class M2(override a: AnyRef) extends M(a)
defined class M2
```

it also works in yesterday's nightly. but in today's nightly I get:
```scala
Welcome to Scala version 2.8.0.r22036-b20100526020129 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_20).

scala> class M (val a: AnyRef)
defined class M

scala> case class M2(a: AnyRef) extends M(a)
<console>:6: error: overriding value a in class M of type AnyRef;
 value a needs `override' modifier
       case class M2(a: AnyRef) extends M(a)
                     ^

scala> case class M2(override a: AnyRef) extends M(a)
<console>:1: error: 'val' expected but identifier found.
       case class M2(override a: AnyRef) extends M(a)
                              ^

scala> case class M2(override val a: AnyRef) extends M(a)
defined class M2
```

note that the last definition is accepted, so that's the workaround, but the "val" is redundant.

I assume this has to do with the fixes that were applied for scala/bug#3454
